# ikt466-project

./: .gitignore  README.md  dataset.py  init.py  main.py  makefile  pyproject.toml  results.csv  visualise_data.py
data/: .gitignore
src/: main.py  makefile
src/data/: dataset.py  preprocessing.py
src/models/: __init__.py  base.py  cnn.py  gru.py  gru_attention.py  gru_bidirectional.py  gru_dropout_1l.py  gru_dropout_2l.py  gru_layers.py  gru_light.py  gru_minimal.py  gru_relu.py  gru_seq2seq.py  gru_sigmoid.py  gru_tanh.py  lstm.py  wavenet.py
src/models/lstm/: train.py
src/models/traditional/: decisionTree.py
src/utils/: audio.py  confusion_matrix.py  evaluate.py  predict.py  train.py  visualise_data.py
