[project]
name = "ikt466-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=0.3.13",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ruff>=0.13.3",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
