[project]
name = "ikt466-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=0.3.13",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ruff>=0.13.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]
